# fuji

./: Cargo.toml  README.md
src/: config.rs  kalshi.rs  llm.rs  main.rs  tools.rs
src/f1/: race_control.rs
src/kalshi/: api.rs  balance.rs  kalshi.rs  markets.rs  mod.rs  orders.rs  positions.rs  purchase.rs
src/llm/: llm.rs  price_agent.rs
